<resources>
    <string name="app">Monitoring Turtles</string>
    <string name="title_activity_act_main">ActMain</string>
    <string name="title_activity_main">Monitoring Turtles</string>
    <string name="txtButton_turtle_and_nest">Turtle and Nesting Activities</string>
    <string name="txtButton_nest_without_turtle">Nest Without Turtle</string>
    <string name="txtButton_show_data">Records</string>
    <string name="title_activity_turtle_and_nest">Turtle</string>
    <string name="title_activity_act__nest_without_turtle">Nest Without Turtle</string>
    <string name="main_Title">Menu</string>
    <string name="txt_buttonHelp">Help</string>
    <string name="txt_button_help">Help</string>
    <string name="title_activity_act__help">Help</string>
    <string name="title_help_and_data">HELP AND QUERIES</string>
    <string name="title_report">REPORT</string>
    <string name="formTitle_Turtle">Turtle</string>
    <string name="title_descField">Notes (optional)</string>
    <string name="title_specieField">Specie</string>
    <string name="title_observForm">Notes (optional)</string>
    <string name="title_beachForm">Beach</string>
    <string name="title_dateForm">Date</string>
    <string name="title_wcField">Wind Category</string>
    <string name="title_wdField">Wind Direction</string>
    <string name="title_bHeightField">Dune Height (cm)</string>
    <string name="title_TimeField">Time</string>
    <string name="title_activityField">Activity</string>
    <string name="title_activity_act__turtle_and_nest1">Observation</string>
    <string name="title_activity_turtle_and_nest1">Observation</string>
    <string name="title_activity_act_turtle_and_nest2">Nests</string>
    <string name="title_DepthField">Depth (cm)</string>
    <string name="title_nrEggs">Number of Eggs</string>
    <string name="title_DistanceField">Distance to tide</string>
    <string name="title_widthField">Width</string>
    <string name="title_descriptionField">Notes (optional)</string>
    <string name="title_activity_act_turtle_and_nest3">Nest Localization</string>
    <string name="title_HabitatField">Habitat</string>
    <string name="title_dateField">Marking date</string>
    <string name="title_gpsSouth">GPS UTM:South</string>
    <string name="title_gpsEast">GPS UTM:East</string>
    <string name="title_observation">Notes (optional)</string>
    <string name="title_activity_act_turtle_and_nest4">Hatchling</string>
    <string name="title_dateOfBirth">Date of Birth</string>
    <string name="title_hatched">Hatched</string>
    <string name="title_diedInNest">Died in the Nest</string>
    <string name="title_aliveInNest">Alive in the Nest</string>
    <string name="title_nrUndeveloped">Undeveloped</string>
    <string name="title_unhatchedField">Unhatched</string>
    <string name="title_predatedEggs">Predated Eggs</string>
    <string name="title_description">Notes (optional)</string>
    <string name="title_activity_act_turtle_and_nest5">Taggs</string>
    <string name="title_taggingDate">Tagging Date</string>
    <string name="title_leftRing">Left Ring</string>
    <string name="title_rightRing">Right Ring</string>
    <string name="title_internalTag">Internal Tag</string>
    <string name="title_cclMeasure">CCL Measure</string>
    <string name="title_cwlMeasure">CWL Measure</string>
    <string name="menu_item_next">Next</string>
    <string name="menu_item_report">Add</string>
    <string name="title_activity_act_nest_without_turtle">Nest</string>
    <string name="title_activity_act_show_data">Records</string>
    <string name="title_activity_act_help">Help</string>
    <string name="title_erro">ERRO</string>
    <string name="title_msgErro">Error</string>
    <string name="title_home">Home</string>
    <string name="title_sendData">Send</string>
    <string name="title_activity_act_hatchling_2">Hatchling</string>
    <string name="title_activity_act_nest_localization2">"Nest Localization "</string>
    <string name="observationDateField">Observation date</string>
    <string name="camposInvalidos">Fill the blank fields to proceed!</string>
    <string name="title_aviso">Warning</string>
    <string name="title_activity_act_listing_records">List of Records</string>
    <string name="title_action_remove">Remove</string>
    <string name="title_action_edit">Edit</string>
    <string name="app_description" />
    <string name="action_export">Export</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginTitle">Monitoring Turtles</string>
    <string name="usernameHint">Username</string>
    <string name="passwordhint">Password</string>
    <string name="title_action_logout">Logout</string>
    <string name="title_action_exit">Exit</string>
    <string name="title_activity_admin_dashboard">AdminDashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_listing_users">ListingUsers</string>
    <string name="title_activity_listing_activities">ListingActivities</string>
    <string name="title_activity_listing_beach">ListingBeach</string>
    <string name="title_activity_listing_w_c">ListingWC</string>
    <string name="title_activity_listing_data">ListingData</string>
    <string name="title_activity_add_user">AddUser</string>
    <string name="title_activity_add_activities">AddActivities</string>
    <string name="title_activity_add_beach">AddBeach</string>
    <string name="title_activity_add_island">AddIsland</string>
    <string name="title_activity_add_w_c">AddWC</string>
    <string name="title_activity_add_w_d">AddWD</string>
    <string name="title_activity_add_specie">AddSpecie</string>
    <string name="title_activity_add_habitat">AddHabitat</string>

</resources>
