<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActTurtleAndNest4"
    tools:showIn="@layout/act_turtle_and_nest4">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_dateOfBirthField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:text="@string/title_dateOfBirth"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dateOfBirthField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="date"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/title_hatched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/title_hatched"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_nrHatched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/title_diedInNest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/title_diedInNest"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_nrDiedInNest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/title_aliveInNest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/title_aliveInNest"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_nrAliveInNest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/title_nrUndeveloped"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/title_nrUndeveloped"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_nrUndeveloped"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/title_nrUnhatched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/title_unhatchedField"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_nrUnhatched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/title_nrPredatedEggs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/title_predatedEggs"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_nrPredatedEggs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/title_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/title_description"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_HatchDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>